mongo-express-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-express-deployment
  labels:
    app: mongodb-express
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mongodb-express
  template:
    metadata:
      labels:
        app: mongodb-express
    spec:
      containers:
        - name: mongodb-express
          image: mongo-express:latest
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-express-service
  labels:
    app: mongodb-express
spec:
  selector:
    app: mongodb-express
  type: NodePort
  ports:
    - protocol: TCP
      port: 8081 # Service port
      targetPort: 8081 # Container port
      nodePort: 30000 # Exposed NodePort (Range 30000-32767)
